--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,13 @@
+aiohappyeyeballs==2.6.1
+aiohttp==3.11.18
+aiosignal==1.3.2
 annotated-types==0.7.0
 anyio==4.9.0
+assemblyai==0.40.2
 asttokens==3.0.0
+attrs==25.3.0
 certifi==2025.4.26
+chardet==3.0.4
 charset-normalizer==3.4.2
 colorama==0.4.6
 comm==0.2.2
@@ -10,11 +16,17 @@ decorator==5.2.1
 distro==1.9.0
 executing==2.2.0
 filelock==3.18.0
+frozenlist==1.6.0
 fsspec==2025.3.2
+googletrans==4.0.0rc1
 h11==0.16.0
+h2==3.2.0
+hpack==3.0.0
+hstspreload==2025.1.1
 httpcore==1.0.9
 httpx==0.28.1
-idna==3.10
+hyperframe==5.2.0
+idna==2.10
 ipykernel==6.29.5
 ipython==9.2.0
 ipython_pygments_lexers==1.1.1
@@ -28,32 +40,42 @@ MarkupSafe==3.0.2
 matplotlib-inline==0.1.7
 more-itertools==10.7.0
 mpmath==1.3.0
+multidict==6.4.3
 nest-asyncio==1.6.0
 networkx==3.4.2
 numba==0.61.2
 numpy==2.2.5
-openai==1.77.0
+openai==1.78.1
+openai-whisper==20240930
+opencv-contrib-python==4.11.0.86
+opencv-python==4.11.0.86
 packaging==25.0
 parso==0.8.4
-platformdirs==4.3.7
+pillow==11.2.1
+platformdirs==4.3.8
 prompt_toolkit==3.0.51
+propcache==0.3.1
 psutil==7.0.0
 pure_eval==0.2.3
 pydantic==2.11.4
 pydantic_core==2.33.2
 pydub==0.25.1
+pygame==2.6.1
 Pygments==2.19.1
 python-dateutil==2.9.0.post0
+python-dotenv==1.1.0
+python-vlc==3.0.21203
 pywin32==310
 pyzmq==26.4.0
 regex==2024.11.6
 requests==2.32.3
-setuptools==80.3.1
+rfc3986==1.5.0
 six==1.17.0
 sniffio==1.3.1
 stack-data==0.6.3
 sympy==1.14.0
 tiktoken==0.9.0
+torch==2.7.0
 tornado==6.4.2
 tqdm==4.67.1
 traitlets==5.14.3
@@ -61,4 +83,6 @@ typing-inspection==0.4.0
 typing_extensions==4.13.2
 urllib3==2.4.0
 wcwidth==0.2.13
+websockets==15.0.1
+yarl==1.20.0
 yt-dlp==2025.4.30
